---------------------------------------------------------------------------------------------------
Version: 2.0.4
  Features:
    - Changed the gui to be collapsable
  Bugfixes:
    - Fixed issue of debug setting not being applied when being set in-game
    - Fixed major persistancy issue that made the game crash within 1 second on loading a save that has the mod in use
    - Fixed nasty issue with base analysis that caused issues with detecting the borders of the base correctly on loading the mod on an already existing base
    - Fixed crash on placing the very first block of a base
  Optimizations:
    - Refactored big parts of the code and increased maintainability a lot
---------------------------------------------------------------------------------------------------
Version: 2.0.3
  Bugfixes:
    - Area selection is now correctly canceled on pressing 'Q' or copy pasting whilst selecting an area
    - Fixed crash on placing any block
    - Fixed selection-tools spamming inventory when pressing 'Q' or copy pasting anything whilst selecting an area
---------------------------------------------------------------------------------------------------
Version: 2.0.2
  Features:
    - Added small "x" button to top right of frame
  Bugfixes:
    - Fixed broken name and missing tooltip of controls entry in controls settings.
    - Changed name of panel to "Screenshot Toolkit Panel"
---------------------------------------------------------------------------------------------------
Version: 2.0.1
  Optimizations:
    - Added instructions how to select an area in a tooltip
    - Added info-icons to important tooltips
    - Prepared localization
    - Reverted order of changelogs so that the newest are on top
---------------------------------------------------------------------------------------------------
Version: 2.0.0
  Features:
    - There is a gui now! Weeeee!