@@ -1,7 +1,16 @@
+FAS-screenshot-toolkit-panel=Screenshot Toolkit Panel
+
+FAS-auto-screenshots-label=Auto Screenshots
 FAS-status-caption=Status
 FAS-surface-label-caption=Surface
 FAS-surface-value-caption=nauvis (default) [img=info]
 FAS-surface-value-tooltip=This is currently unsettable.
+FAS-do-screenshots-caption=Do screenshots?
+FAS-interval-label-caption=Interval
+FAS-interval-value-tooltip=Allowed values are between 1 and 60.
+FAS-single-tick-caption=Single tick screenshots
+FAS-splitting-factor-caption=Splitting factor [img=info]
+FAS-splitting-factor-tooltip=This causes the screenshots to be split into smaller fragments. A splitting factor of 4 means 4 times as many fragments, as well that the time difference between the first and the last screenshot is 4 times as long.\n\nIncrease this if the screenshotting is causing performance issues.
 
 FAS-area-screenshots-label=Area Screenshots
 FAS-area-caption=Area [img=info]
@@ -16,7 +25,6 @@ FAS-resolution-caption=Resolution
 FAS-no-area-selected=no area selected
 FAS-estimated-filesize=Estimated Filesize
 FAS-warning=Caution! This could disrupt multiplayer games.
-FAS-i-understand-caption=I understand
 
 FAS-start-area-screenshot-button-caption=Start Area Screenshot
 
